k8s/35-network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nats-client-ingress
  namespace: fscl
spec:
  podSelector:
    matchLabels:
      app: nats
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              fscl.io/name: fscl
          podSelector:
            matchLabels:
              fscl.io/nats-client: "true"
        - namespaceSelector:
            matchLabels:
              fscl.io/name: fscl-process
          podSelector:
            matchLabels:
              fscl.io/nats-client: "true"
      ports:
        - protocol: TCP
          port: 4222
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-postgres-ingress
  namespace: fscl-process
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: process-api
      ports:
        - protocol: TCP
          port: 5432
